# template_cpp

./: .clang-format  .clang-tidy  .cppcheck-suppress  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENCE  README.md  init.py  llvm-cov.sh
ci/: clang_format.sh
ci/docker_targets/analyse/: Tagfile  bootstrap.sh
ci/docker_targets/ci/: Dockerfile  Tagfile  bootstrap.sh
ci/docker_targets/clang/: Dockerfile  Tagfile  bootstrap.sh
ci/docker_targets/clang_format/: Tagfile  bootstrap.sh
ci/docker_targets/clang_tidy/: Dockerfile  Tagfile  bootstrap.sh
ci/docker_targets/clang_tools/: Tagfile
ci/docker_targets/coreutils/: Tagfile  bootstrap.sh
ci/docker_targets/cppcheck/: Tagfile  bootstrap.sh
ci/docker_targets/doxygen/: Tagfile  bootstrap.sh
ci/docker_targets/flawfinder/: Tagfile  bootstrap.sh
ci/docker_targets/gcc/: Tagfile
ci/docker_targets/gcc_coverage/: Dockerfile  Tagfile  bootstrap.sh
ci/docker_targets/sphinx_html/: Tagfile  bootstrap.sh
ci/docker_targets/sphinx_latexpdf/: Dockerfile  Tagfile  bootstrap.sh
cicd/: clang_format.sh
cicd/docker_targets/appimage_x86_64/: Dockerfile  Tagfile  bootstrap.sh
cicd/docker_targets/clang/: Tagfile  bootstrap.sh
cicd/docker_targets/clang_tools/: Dockerfile  Tagfile  bootstrap.sh
cicd/docker_targets/coreutils/: Tagfile  bootstrap.sh
cicd/docker_targets/doxygen/: Tagfile  bootstrap.sh
cicd/docker_targets/gcc/: Tagfile  bootstrap.sh
cicd/docker_targets/gcc_coverage/: Tagfile  bootstrap.sh
cicd/docker_targets/mingw_x86_64/: Tagfile  bootstrap.sh
cicd/docker_targets/osxcross_i386_x86_64/: Tagfile  bootstrap.sh
cicd/docker_targets/sphinx_html/: Tagfile  bootstrap.sh
cmake/: CodeCoverage.cmake  Coverage.cmake  Instrumentation.cmake  apidoc.py  autosymlink.py  breathe_apidoc.cmake  catch.cmake  check.cmake  clang_format.cmake  clang_tidy.cmake  code.cmake  code_coverage.cmake  coverage.cmake  cppcheck.cmake  find_python_module.cmake  flawfinder.cmake  format_check.sh  line_limit.cmake  line_limit.sh  package.cmake  plantuml.cmake  regex_check.cmake  regex_check.sh  sanitise.cmake  sphinx-autobuild.cmake  sphinx-build.cmake  sphinx_multibuild.py  version.cmake  version_header.cmake
cmake/cross/: mingw_x86_64.cmake  osxcross_i386.cmake  osxcross_x86_64.cmake
cmake/pkg/: c_template.desktop.in
doc/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  doxyfile.in  index.rst  sphinx_multibuild_runner.py.in
doc/_static/: theme_overrides.css
doc/api/: index.rst
doc/api/file/: index.rst.in
doc/api/type/: index.rst.in
doc/ci/: index.rst  line_limit.rst  optimising.rst  regex_check.rst
doc/ci/analyse/: clang_format.rst  clang_tidy.rst  doxygen.rst  flawfinder.rst  line_limit.rst  regex_check.rst
doc/cmake/: check.rst  clang_tidy.rst  code.rst  coverage.rst  doc.rst  flawfinder.rst  format.rst  index.rst  line_limit.rst  regex_check.rst  sanitise.rst  test.rst  werror.rst
doc/deploy/: index.rst  pages.rst  review.rst
doc/doc/: breathe.rst  index.rst  version.rst
doc/docker/: index.rst  managing_images.rst
doc/package/: index.rst  linux_appimage.rst  macos_osxcross.rst  windows_mingw.rst
include/c_template/: add.h  base.hpp  functions.h  functions_two.h  struct.h  subtract.h
include/c_template/inheritance/: derived.hpp
include/cpp_template/: base.hpp  derived.hpp
src/: CMakeLists.txt  add.c  derived.cpp  functions.c  functions_two.c  main.c  main.cpp  subtract.c
src/inheritance/: CMakeLists.txt  derived.cpp
test/: CMakeLists.txt  add.cpp  derived.cpp  subtract.cpp
test/add/: CMakeLists.txt  add.cpp
test/functions/: CMakeLists.txt  add.cpp  return_zero.cpp
test/inheritance/: CMakeLists.txt  inheritance.cpp
